--- a/style.css
+++ b/style.css
@@ -6,6 +6,17 @@
     margin: 0;
     padding: 0;
 }
+@keyframes sweep {
+	0% {
+		opacity: 0;
+		transform: translateY(-1em);
+	}
+
+	100% {
+		opacity: 1;
+		transform: translateY(0);
+	}
+}
 body{
     background: linear-gradient(hsl(273, 75%, 66%),hsl(240, 73%, 65%));
     min-height: 100vh;
@@ -36,6 +47,8 @@ body{
     padding-left: 1.5rem;
     padding-right: 1.5rem;
     padding-bottom: 3rem;
+    -webkit-box-shadow: 0px 24px 35px 0px rgba(65,29,124,0.45); 
+    box-shadow: 0px 24px 35px 0px rgba(65,29,124,0.45);
 }
 .container>h1{
     color: hsl(238, 29%, 16%);
@@ -77,6 +90,10 @@ body{
 }
 .faq_contain[open] > .Question{
     font-weight: 700;
+}
+.faq_contain[open] summary ~ *{
+    animation: sweep 0.2s ease-out;
+	will-change: opacity, transform;
 }
 .arrow{
     position: relative;
@@ -168,5 +185,14 @@ body{
         height: auto;
         
     }
+/* Add styled focus states on tab not hover */
 
+:focus-visible {
+    outline: 3px dotted currentColor;
+    outline-offset: 0.25rem;
+  }
+  
+  :focus:not(:focus-visible) {
+    outline: transparent;
+  }
 }
